@@ -26,7 +26,7 @@
 
 BEGIN {
 
-$main::VERSION='0.99999972';
+$main::VERSION='0.99999973';
 
 # ASCII BANNER Courtesy of:  http://www.network-science.de/ascii/
 my $fa_banner=<<END;
