@@ -19,6 +19,13 @@
 ################################################################
 
 
+2013-12-17  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.99999973 released.
+
+        * Complete Import from Remote Host.
+
+
 2013-12-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.99999972 released.
